adicionando testes do selenium