@@ -3,6 +3,7 @@
 	<groupId>com.danielfariati</groupId>
 	<artifactId>comente-sobre</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 
 	<developers>
 		<developer>
@@ -64,11 +65,17 @@
 			<version>2.4.2</version>
 		</dependency>
 
-		<!-- Provided -->
 		<dependency>  
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
+		</dependency>
+
+		<!-- Provided -->
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>6.0.35</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -95,10 +102,30 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.jstryker</groupId>
-			<artifactId>jstryker</artifactId>
-			<version>1.0.3</version>
+		    <groupId>org.jstryker</groupId>
+		    <artifactId>jstryker</artifactId>
+		    <version>1.0.3</version>
+		    <scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>2.24.1</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-server</artifactId>
+			<version>2.24.1</version>
+			<scope>test</scope>
+			<exclusions>
+			    <exclusion>
+			        <groupId>org.mortbay.jetty</groupId>
+			        <artifactId>servlet-api-2.5</artifactId>
+			    </exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
@@ -111,6 +138,65 @@
 					<source>1.6</source>
 					<target>1.6</target>
 					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.0-beta-1</version>
+				<configuration>
+				    <port>8080</port>
+				    <path>/comente-sobre</path>
+				</configuration>
+				<executions>
+					<execution>
+						<id>tomcat-run</id>
+						<goals>
+							<goal>run-war-only</goal>
+						</goals>
+						<phase>pre-integration-test</phase>
+						<configuration>
+						    <fork>true</fork>
+						</configuration>
+					</execution>
+					<execution>
+						<id>tomcat-shutdown</id>
+						<goals>
+							<goal>shutdown</goal>
+						</goals>
+						<phase>post-integration-test</phase>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>default-test</id>
+						<configuration>
+						    <includes>
+						        <include>**/*ControllerTest*</include>
+						        <include>**/*BusinessTest*</include>
+						    </includes>
+						</configuration>
+					</execution>
+					<execution>
+						<id>surefire-it</id>
+						<phase>integration-test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<configuration>
+						    <includes>
+						        <include>**/SeleniumTestCase*</include>
+						    </includes>
+							<skipTests>false</skipTests>
+						</configuration>
+					</execution>
+				</executions>
+				<configuration>
+					<argLine>-Xms256M -Xmx768M -XX:MaxPermSize=256M</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
